[tool.poetry]
name = "aws_langchain"
version = "0.0.1"
description = "Langchain utility classes to aid working with AWS services"
readme = "README.md"
packages = [{include = "samples"}]

[tool.poetry.dependencies]
python = ">=3.8"
langchain = "0.0.137"
boto3
html2text

[tool.poetry.group.samples.dependencies]
openai
anthropic
streamlit

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"