[tool.poetry]
name = "aws_langchain"
version = "0.0.1"
authors = ["aws"]
description = "Langchain utility classes to aid working with AWS services"
readme = "README.md"
packages = [{include = "samples"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "0.0.137"
boto3 = "^1.24.28"
html2text = "^2020.1.16"

[tool.poetry.group.samples.dependencies]
openai = "^0.27.6"
anthropic = "^0.2.7"
streamlit = "^1.22.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"